[package]
name = "twigs"
version = "0.1.0"
authors = ["boio <xorofficial@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rocket = "0.4.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
regex = "1"
rust-stemmers = "^1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
